zabbix/overlays/dev/patch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web
  namespace: zabbix-dev
spec:
  rules:
    - host: zabbix-prod.greypixel.nl
